client accounts and qr code”
